@@ -17,7 +17,10 @@ Dependencies are checked during installation.
 A couple of tools such as bowtie2 and samtools (>1.0) can be automatically installed if not detected.
 Others have to be installed before starting the installation :
 
-- R http://www.r-project.org/
+- R (http://www.r-project.org/) with the following packages
+--- ggplot2 (>2.2.1)
+--- RColorBrewer
+--- grid
 - Python libraries :
 --- bx-python (>=0.5.0) - https://pypi.python.org/pypi/bx-python
 --- numpy (>=1.8.2) - http://www.scipy.org/scipylib/download.html
